{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Movement",
            "id": "ea8f4c25-eba9-4d32-85ac-3400f6a9cc95",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "545245e9-8712-4f3c-8e27-0f6cd1128b5b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "63d688a7-b7cc-4e7a-9223-5505f3e96cff",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c0bc5fd6-3bd3-47b5-939c-10e7871a445a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "95e883ce-4172-4f33-bafe-f78c4e0cbb37",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6600ce4d-1efb-4686-8185-fca4043bad50",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dd24fab7-4d4b-43e7-b6aa-fc4e2122b3da",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "a64b7e37-f15d-4dec-a571-ed6b1d13ddad",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "04aa0082-eb53-43e6-ba10-83a638a80efe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "98f73c5a-394b-4f1b-a225-926f172f781f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "57fe5caf-17f9-4429-8ad8-ae2dbacb8406",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a0bd91c-859e-4b05-8918-b7798a5b5ac7",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "6ce3cd40-1963-41a6-b915-6f4a2f3bb4e6",
            "actions": [
                {
                    "name": "Keyboard",
                    "type": "Value",
                    "id": "f4d12aed-d4a3-46b4-a1a1-ed0197ce3111",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "517bbb91-0877-479c-b5d9-b9b3961b5c8f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea0e0ae7-a859-4325-9b31-1429b79c9fa4",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f6c06c2-5440-4940-af92-c9f8df505d7b",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e5994e5-8b39-4994-8d0c-ba6e268aa1c7",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "106b3be0-c5a8-47a7-bd43-0598d5fb66ea",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "Scale(factor=5)",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a6f08f6-e63e-4533-ad76-9982b7980968",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "Scale(factor=6)",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ESC",
            "id": "4d53c32a-2009-4484-967f-5adf4899153b",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "85456c01-de6f-4768-8c1b-24021b8daaf6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0444b08c-7cc6-4bf6-bdde-0540d36d44ee",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}